 * [Install-User's](http://get-carbon.org/help/Install-User.html) `UserName` and `Password` parameters. Use the new `Credential` parameter instead.

### Renamed Functions

The following functions were renamed, but with backwards-compatible aliases in place, so you shouldn't have to change any code.

 * `Invoke-WindowsInstaller` -> [Install-Msi](http://get-carbon.org/help/Install-Msi.html)
 
### Switch to System.DirectoryServices.AccountManagement API for User/Group Management

The following functions were re-written to use the `System.DirectoryServices.AccountManagement` API, introduced in .NET 3.5.

 * [Add-MemberToGroup](http://get-carbon.org/help/Add-MemberToGroup.html)
 * [Install-Group](http://get-carbon.org/help/Install-Group.html)
 * [Install-User](http://get-carbon.org/help/Install-User.html) 
 * [Test-User](http://get-carbon.org/help/Test-User.html)
 * [Uninstall-User](http://get-carbon.org/help/Uninstall-User.html)
 
### Miscellaneous Changes

 * [Get-IisAppPool](https://get-carbon.org/help/Get-IisAppPool.html)
    * Now return all application pools installed on the local computer when called with no parameters.
    * Added a default table format for `Microsoft.Web.Administration.ApplicationPool` objects.
 * [Get-ProgramInstallInfo](http://get-carbon.org/help/Get-ProgramInstallInfo.html)
    * Return object's `Version` property changed from an `int` to a [Version](http://msdn.microsoft.com/en-us/library/y0hf9t2e.aspx) object.
    * Return object's now have `ProductCode` and `User` properties. If a program doesn't have a product code, it is set to `[Guid]::Empty`. The `User` property is only set for per-user software installs.
 * [Get-ServiceConfiguration](http://get-carbon.org/help/Get-ServiceConfiguration.html) now supports services from remote computers.